# ibkr-docker

./: .env  .gitignore  Dockerfile  Dockerfile.template  FUNDING.yml  README.md  build.sh  check-port.sh  compose.yml  config.ini  cronjob  docker-compose.yml  ibkr-version.sh  pyproject.toml  renovate.json  start-docker.sh  todo.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: 0xposure-release.yml  build-on-change.yml  dependabot-auto-merge.yml  detect-releases.yml  docker.yml  manual-build.yml  publish.yml  start-detect-releases.yml
app/: Dockerfile  nginx.conf  start.sh  twsstart.sh
image-files/: script.txt  start.sh
image-files/root/.config/openbox/: autostart
latest/: Dockerfile
latest/image-files/: index.html  start.sh
stable/: Dockerfile
stable/image-files/: start.sh
tests/: test_ibkr.py
