[project]
name = "ibkr-docker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "extrange", email = "29305375+extrange@users.noreply.github.com"},
]
dependencies = [
    "pytest>=8.2.1",
    "ib-insync>=0.9.86",
    "pytest-asyncio>=0.23.7",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest"