[project]
name = "ibkr-docker"
version = "0.1.0"
description = "IBKR in Docker"
authors = [
    { name = "extrange", email = "29305375+extrange@users.noreply.github.com" },
]
dependencies = ["ib-insync>=0.9.86"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pyright[nodejs]>=1.1.382.post0",
    "ruff>=0.6.8",
    "pytest>=8.3.3",
]
